#3; use a wrapper around consul for resilience